--- a/.github/workflows/blog-update.yml
+++ b/.github/workflows/blog-update.yml
@@ -27,6 +27,8 @@ jobs:
         run: npm run build
 
       - name: Commit changes
+        env:
+           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --global user.name 'GitHub Actions'
           git config --global user.email 'actions@github.com'
